// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Query Interface Should convert Extract const sql (SELECT EXTRACT(CENTURY FROM TIMESTAMP '2000-12-16 12:21:13')) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "date_part",
      "type": Object {
        "name": "date_part",
        "type": "Named",
        "value": Object {
          "type": "Number",
        },
      },
    },
  ],
  "sources": Array [],
}
`;

exports[`Query Interface Should convert between fields not named sql (SELECT FALSE as "col1", TRUE as "col2") 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "col1",
      "type": Object {
        "literal": false,
        "type": "Boolean",
      },
    },
    Object {
      "name": "col2",
      "type": Object {
        "literal": true,
        "type": "Boolean",
      },
    },
  ],
  "sources": Array [],
}
`;

exports[`Query Interface Should convert big int sql (SELECT '123'::int8) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "int8",
      "type": Object {
        "name": "int8",
        "type": "Named",
        "value": Object {
          "type": "BigInt",
        },
      },
    },
  ],
  "sources": Array [],
}
`;

exports[`Query Interface Should convert binary expression column sql (SELECT (col1 + col2) AS "res1" FROM table1) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "res1",
      "type": Object {
        "available": Array [
          Array [
            Object {
              "type": "Number",
            },
            Object {
              "type": "Number",
            },
            Object {
              "type": "Number",
            },
          ],
          Array [
            Object {
              "type": "BigInt",
            },
            Object {
              "type": "BigInt",
            },
            Object {
              "type": "Number",
            },
          ],
          Array [
            Object {
              "type": "Date",
            },
            Object {
              "type": "String",
            },
            Object {
              "type": "Date",
            },
          ],
        ],
        "index": 2,
        "left": Object {
          "column": "col1",
          "schema": undefined,
          "sourceTag": Object {
            "nextPos": 12,
            "pos": 8,
            "tag": "Column",
            "values": Array [
              Object {
                "nextPos": 12,
                "pos": 8,
                "tag": "UnquotedIdentifier",
                "value": "col1",
              },
            ],
          },
          "table": undefined,
          "type": "LoadColumn",
        },
        "right": Object {
          "column": "col2",
          "schema": undefined,
          "sourceTag": Object {
            "nextPos": 19,
            "pos": 15,
            "tag": "Column",
            "values": Array [
              Object {
                "nextPos": 19,
                "pos": 15,
                "tag": "UnquotedIdentifier",
                "value": "col2",
              },
            ],
          },
          "table": undefined,
          "type": "LoadColumn",
        },
        "sourceTag": Object {
          "nextPos": 19,
          "pos": 8,
          "tag": "BinaryExpression",
          "values": Array [
            Object {
              "nextPos": 12,
              "pos": 8,
              "tag": "Column",
              "values": Array [
                Object {
                  "nextPos": 12,
                  "pos": 8,
                  "tag": "UnquotedIdentifier",
                  "value": "col1",
                },
              ],
            },
            Object {
              "nextPos": 14,
              "pos": 13,
              "tag": "BinaryOperator",
              "value": "+",
            },
            Object {
              "nextPos": 19,
              "pos": 15,
              "tag": "Column",
              "values": Array [
                Object {
                  "nextPos": 19,
                  "pos": 15,
                  "tag": "UnquotedIdentifier",
                  "value": "col2",
                },
              ],
            },
          ],
        },
        "type": "LoadOperator",
      },
    },
  ],
  "sources": Array [
    Object {
      "isResult": true,
      "name": "table1",
      "schema": undefined,
      "sourceTag": Object {
        "nextPos": 42,
        "pos": 36,
        "tag": "Table",
        "values": Array [
          Object {
            "nextPos": 42,
            "pos": 36,
            "tag": "QualifiedIdentifier",
            "values": Array [
              Object {
                "nextPos": 42,
                "pos": 36,
                "tag": "UnquotedIdentifier",
                "value": "table1",
              },
            ],
          },
        ],
      },
      "table": "table1",
      "type": "Table",
    },
  ],
}
`;

exports[`Query Interface Should convert binary expression numbers sql (SELECT 1+2) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "?column?",
      "type": Object {
        "type": "Number",
      },
    },
  ],
  "sources": Array [],
}
`;

exports[`Query Interface Should convert binary expression string sql (SELECT 'test' || 'other') 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "?column?",
      "type": Object {
        "type": "String",
      },
    },
  ],
  "sources": Array [],
}
`;

exports[`Query Interface Should convert boolean fields mixed sql (SELECT FALSE, TRUE as "col2") 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "bool",
      "type": Object {
        "literal": false,
        "type": "Boolean",
      },
    },
    Object {
      "name": "col2",
      "type": Object {
        "literal": true,
        "type": "Boolean",
      },
    },
  ],
  "sources": Array [],
}
`;

exports[`Query Interface Should convert boolean fields named sql (SELECT FALSE as "col1", TRUE as "col2") 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "col1",
      "type": Object {
        "literal": false,
        "type": "Boolean",
      },
    },
    Object {
      "name": "col2",
      "type": Object {
        "literal": true,
        "type": "Boolean",
      },
    },
  ],
  "sources": Array [],
}
`;

exports[`Query Interface Should convert boolean fields not named sql (SELECT FALSE, TRUE) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "bool",
      "type": Object {
        "literal": false,
        "type": "Boolean",
      },
    },
    Object {
      "name": "bool",
      "type": Object {
        "literal": true,
        "type": "Boolean",
      },
    },
  ],
  "sources": Array [],
}
`;

exports[`Query Interface Should convert case columns sql (
        SELECT
          CASE col1
            WHEN 12 THEN table1.col1
            WHEN 20 THEN col2
            ELSE 'other'
          END AS "res1"
        FROM table1
      ) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "res1",
      "type": Object {
        "items": Array [
          Object {
            "column": "col1",
            "schema": undefined,
            "sourceTag": Object {
              "nextPos": 72,
              "pos": 61,
              "tag": "Column",
              "values": Array [
                Object {
                  "nextPos": 67,
                  "pos": 61,
                  "tag": "UnquotedIdentifier",
                  "value": "table1",
                },
                Object {
                  "nextPos": 72,
                  "pos": 68,
                  "tag": "UnquotedIdentifier",
                  "value": "col1",
                },
              ],
            },
            "table": "table1",
            "type": "LoadColumn",
          },
          Object {
            "column": "col2",
            "schema": undefined,
            "sourceTag": Object {
              "nextPos": 102,
              "pos": 98,
              "tag": "Column",
              "values": Array [
                Object {
                  "nextPos": 102,
                  "pos": 98,
                  "tag": "UnquotedIdentifier",
                  "value": "col2",
                },
              ],
            },
            "table": undefined,
            "type": "LoadColumn",
          },
          Object {
            "literal": "other",
            "type": "String",
          },
        ],
        "type": "Union",
      },
    },
  ],
  "sources": Array [
    Object {
      "isResult": true,
      "name": "table1",
      "schema": undefined,
      "sourceTag": Object {
        "nextPos": 171,
        "pos": 165,
        "tag": "Table",
        "values": Array [
          Object {
            "nextPos": 171,
            "pos": 165,
            "tag": "QualifiedIdentifier",
            "values": Array [
              Object {
                "nextPos": 171,
                "pos": 165,
                "tag": "UnquotedIdentifier",
                "value": "table1",
              },
            ],
          },
        ],
      },
      "table": "table1",
      "type": "Table",
    },
  ],
}
`;

exports[`Query Interface Should convert case sql (SELECT CASE WHEN TRUE THEN TRUE ELSE 'other' END) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "?column?",
      "type": Object {
        "items": Array [
          Object {
            "literal": true,
            "type": "Boolean",
          },
          Object {
            "literal": "other",
            "type": "String",
          },
        ],
        "type": "Union",
      },
    },
  ],
  "sources": Array [],
}
`;

exports[`Query Interface Should convert cast with schema sql (SELECT 'text'::information_schema.sql_identifier) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "row",
      "type": Object {
        "name": "sql_identifier",
        "schema": "information_schema",
        "sourceTag": Object {
          "nextPos": 48,
          "pos": 15,
          "tag": "Type",
          "values": Array [
            Object {
              "nextPos": 48,
              "pos": 15,
              "tag": "QualifiedIdentifier",
              "values": Array [
                Object {
                  "nextPos": 33,
                  "pos": 15,
                  "tag": "UnquotedIdentifier",
                  "value": "information_schema",
                },
                Object {
                  "nextPos": 48,
                  "pos": 34,
                  "tag": "UnquotedIdentifier",
                  "value": "sql_identifier",
                },
              ],
            },
          ],
        },
        "type": "LoadRecord",
      },
    },
  ],
  "sources": Array [],
}
`;

exports[`Query Interface Should convert combination select sql (
        SELECT
          col1 AS "res1",
          (SELECT id FROM table2 JOIN table3 ON table3.id = table2.id AND table3.val > :joinVal LIMIT 1)
        FROM table1
        UNION
        SELECT
          col1 AS "res1",
          table4.col2
        FROM table4
        WHERE :id = table1.id AND table4.id = :id
      ) 1`] = `
Object {
  "params": Array [
    Object {
      "name": "joinVal",
      "nextPos": 137,
      "pick": Array [],
      "pos": 129,
      "required": false,
      "spread": false,
      "type": Object {
        "column": "val",
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 126,
          "pos": 116,
          "tag": "Column",
          "values": Array [
            Object {
              "nextPos": 122,
              "pos": 116,
              "tag": "UnquotedIdentifier",
              "value": "table3",
            },
            Object {
              "nextPos": 126,
              "pos": 123,
              "tag": "UnquotedIdentifier",
              "value": "val",
            },
          ],
        },
        "table": "table3",
        "type": "LoadColumn",
      },
    },
    Object {
      "name": "id",
      "nextPos": 281,
      "pick": Array [],
      "pos": 278,
      "required": false,
      "spread": false,
      "type": Object {
        "column": "id",
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 293,
          "pos": 284,
          "tag": "Column",
          "values": Array [
            Object {
              "nextPos": 290,
              "pos": 284,
              "tag": "UnquotedIdentifier",
              "value": "table1",
            },
            Object {
              "nextPos": 293,
              "pos": 291,
              "tag": "UnquotedIdentifier",
              "value": "id",
            },
          ],
        },
        "table": "table1",
        "type": "LoadColumn",
      },
    },
    Object {
      "name": "id",
      "nextPos": 313,
      "pick": Array [],
      "pos": 310,
      "required": false,
      "spread": false,
      "type": Object {
        "column": "id",
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 307,
          "pos": 298,
          "tag": "Column",
          "values": Array [
            Object {
              "nextPos": 304,
              "pos": 298,
              "tag": "UnquotedIdentifier",
              "value": "table4",
            },
            Object {
              "nextPos": 307,
              "pos": 305,
              "tag": "UnquotedIdentifier",
              "value": "id",
            },
          ],
        },
        "table": "table4",
        "type": "LoadColumn",
      },
    },
  ],
  "results": Array [
    Object {
      "name": "res1",
      "type": Object {
        "column": "col1",
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 30,
          "pos": 26,
          "tag": "Column",
          "values": Array [
            Object {
              "nextPos": 30,
              "pos": 26,
              "tag": "UnquotedIdentifier",
              "value": "col1",
            },
          ],
        },
        "table": undefined,
        "type": "LoadColumn",
      },
    },
    Object {
      "name": "id",
      "type": Object {
        "nullable": true,
        "type": "Optional",
        "value": Object {
          "column": "id",
          "schema": undefined,
          "sourceTag": Object {
            "nextPos": 62,
            "pos": 60,
            "tag": "Column",
            "values": Array [
              Object {
                "nextPos": 62,
                "pos": 60,
                "tag": "UnquotedIdentifier",
                "value": "id",
              },
            ],
          },
          "table": undefined,
          "type": "LoadColumn",
        },
      },
    },
  ],
  "sources": Array [
    Object {
      "isResult": true,
      "name": "table2",
      "schema": undefined,
      "sourceTag": Object {
        "nextPos": 74,
        "pos": 68,
        "tag": "Table",
        "values": Array [
          Object {
            "nextPos": 74,
            "pos": 68,
            "tag": "QualifiedIdentifier",
            "values": Array [
              Object {
                "nextPos": 74,
                "pos": 68,
                "tag": "UnquotedIdentifier",
                "value": "table2",
              },
            ],
          },
        ],
      },
      "table": "table2",
      "type": "Table",
    },
    Object {
      "isResult": true,
      "name": "table3",
      "schema": undefined,
      "sourceTag": Object {
        "nextPos": 86,
        "pos": 80,
        "tag": "Table",
        "values": Array [
          Object {
            "nextPos": 86,
            "pos": 80,
            "tag": "QualifiedIdentifier",
            "values": Array [
              Object {
                "nextPos": 86,
                "pos": 80,
                "tag": "UnquotedIdentifier",
                "value": "table3",
              },
            ],
          },
        ],
      },
      "table": "table3",
      "type": "Table",
    },
    Object {
      "isResult": true,
      "name": "table1",
      "schema": undefined,
      "sourceTag": Object {
        "nextPos": 166,
        "pos": 160,
        "tag": "Table",
        "values": Array [
          Object {
            "nextPos": 166,
            "pos": 160,
            "tag": "QualifiedIdentifier",
            "values": Array [
              Object {
                "nextPos": 166,
                "pos": 160,
                "tag": "UnquotedIdentifier",
                "value": "table1",
              },
            ],
          },
        ],
      },
      "table": "table1",
      "type": "Table",
    },
    Object {
      "isResult": true,
      "name": "table4",
      "schema": undefined,
      "sourceTag": Object {
        "nextPos": 263,
        "pos": 257,
        "tag": "Table",
        "values": Array [
          Object {
            "nextPos": 263,
            "pos": 257,
            "tag": "QualifiedIdentifier",
            "values": Array [
              Object {
                "nextPos": 263,
                "pos": 257,
                "tag": "UnquotedIdentifier",
                "value": "table4",
              },
            ],
          },
        ],
      },
      "table": "table4",
      "type": "Table",
    },
  ],
}
`;

exports[`Query Interface Should convert complex row sql (SELECT (1, 2+2, :param1), ROW (123), (1,2,(3))) 1`] = `
Object {
  "params": Array [
    Object {
      "name": "param1",
      "nextPos": 23,
      "pick": Array [],
      "pos": 16,
      "required": false,
      "spread": false,
      "type": Object {
        "type": "Unknown",
      },
    },
  ],
  "results": Array [
    Object {
      "name": "row",
      "type": Object {
        "name": "row",
        "type": "Named",
        "value": Object {
          "type": "String",
        },
      },
    },
    Object {
      "name": "row",
      "type": Object {
        "name": "row",
        "type": "Named",
        "value": Object {
          "type": "String",
        },
      },
    },
    Object {
      "name": "row",
      "type": Object {
        "name": "row",
        "type": "Named",
        "value": Object {
          "type": "String",
        },
      },
    },
  ],
  "sources": Array [],
}
`;

exports[`Query Interface Should convert composite type from table sql (SELECT (item).supplier_id FROM all_types) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "supplier_id",
      "type": Object {
        "name": "supplier_id",
        "sourceTag": Object {
          "nextPos": 25,
          "pos": 7,
          "tag": "CompositeAccess",
          "values": Array [
            Object {
              "nextPos": 12,
              "pos": 8,
              "tag": "Column",
              "values": Array [
                Object {
                  "nextPos": 12,
                  "pos": 8,
                  "tag": "UnquotedIdentifier",
                  "value": "item",
                },
              ],
            },
            Object {
              "nextPos": 25,
              "pos": 14,
              "tag": "UnquotedIdentifier",
              "value": "supplier_id",
            },
          ],
        },
        "type": "CompositeAccess",
        "value": Object {
          "column": "item",
          "schema": undefined,
          "sourceTag": Object {
            "nextPos": 12,
            "pos": 8,
            "tag": "Column",
            "values": Array [
              Object {
                "nextPos": 12,
                "pos": 8,
                "tag": "UnquotedIdentifier",
                "value": "item",
              },
            ],
          },
          "table": undefined,
          "type": "LoadColumn",
        },
      },
    },
  ],
  "sources": Array [
    Object {
      "isResult": true,
      "name": "all_types",
      "schema": undefined,
      "sourceTag": Object {
        "nextPos": 40,
        "pos": 31,
        "tag": "Table",
        "values": Array [
          Object {
            "nextPos": 40,
            "pos": 31,
            "tag": "QualifiedIdentifier",
            "values": Array [
              Object {
                "nextPos": 40,
                "pos": 31,
                "tag": "UnquotedIdentifier",
                "value": "all_types",
              },
            ],
          },
        ],
      },
      "table": "all_types",
      "type": "Table",
    },
  ],
}
`;

exports[`Query Interface Should convert cte with values sql (WITH ins(id, val) AS (VALUES (1::int, 2::int),(3::int, 4::int)) SELECT * FROM ins) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "?column?",
      "type": Object {
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 72,
          "pos": 71,
          "tag": "StarIdentifier",
          "values": Array [
            Object {
              "nextPos": 72,
              "pos": 71,
              "tag": "Star",
            },
          ],
        },
        "table": undefined,
        "type": "LoadStar",
      },
    },
  ],
  "sources": Array [
    Object {
      "name": "ins",
      "sourceTag": Object {
        "nextPos": 63,
        "pos": 5,
        "tag": "CTE",
        "values": Array [
          Object {
            "nextPos": 17,
            "pos": 5,
            "tag": "CTEName",
            "values": Array [
              Object {
                "nextPos": 8,
                "pos": 5,
                "tag": "UnquotedIdentifier",
                "value": "ins",
              },
              Object {
                "nextPos": 17,
                "pos": 8,
                "tag": "Columns",
                "values": Array [
                  Object {
                    "nextPos": 11,
                    "pos": 9,
                    "tag": "UnquotedIdentifier",
                    "value": "id",
                  },
                  Object {
                    "nextPos": 16,
                    "pos": 13,
                    "tag": "UnquotedIdentifier",
                    "value": "val",
                  },
                ],
              },
            ],
          },
          Object {
            "nextPos": 62,
            "pos": 22,
            "tag": "CTEValuesList",
            "values": Array [
              Object {
                "nextPos": 45,
                "pos": 29,
                "tag": "CTEValues",
                "values": Array [
                  Object {
                    "nextPos": 36,
                    "pos": 30,
                    "tag": "PgCast",
                    "values": Array [
                      Object {
                        "nextPos": 31,
                        "pos": 30,
                        "tag": "Number",
                        "value": "1",
                      },
                      Object {
                        "nextPos": 36,
                        "pos": 33,
                        "tag": "Type",
                        "values": Array [
                          Object {
                            "nextPos": 36,
                            "pos": 33,
                            "tag": "QualifiedIdentifier",
                            "values": Array [
                              Object {
                                "nextPos": 36,
                                "pos": 33,
                                "tag": "UnquotedIdentifier",
                                "value": "int",
                              },
                            ],
                          },
                        ],
                      },
                    ],
                  },
                  Object {
                    "nextPos": 44,
                    "pos": 38,
                    "tag": "PgCast",
                    "values": Array [
                      Object {
                        "nextPos": 39,
                        "pos": 38,
                        "tag": "Number",
                        "value": "2",
                      },
                      Object {
                        "nextPos": 44,
                        "pos": 41,
                        "tag": "Type",
                        "values": Array [
                          Object {
                            "nextPos": 44,
                            "pos": 41,
                            "tag": "QualifiedIdentifier",
                            "values": Array [
                              Object {
                                "nextPos": 44,
                                "pos": 41,
                                "tag": "UnquotedIdentifier",
                                "value": "int",
                              },
                            ],
                          },
                        ],
                      },
                    ],
                  },
                ],
              },
              Object {
                "nextPos": 62,
                "pos": 46,
                "tag": "CTEValues",
                "values": Array [
                  Object {
                    "nextPos": 53,
                    "pos": 47,
                    "tag": "PgCast",
                    "values": Array [
                      Object {
                        "nextPos": 48,
                        "pos": 47,
                        "tag": "Number",
                        "value": "3",
                      },
                      Object {
                        "nextPos": 53,
                        "pos": 50,
                        "tag": "Type",
                        "values": Array [
                          Object {
                            "nextPos": 53,
                            "pos": 50,
                            "tag": "QualifiedIdentifier",
                            "values": Array [
                              Object {
                                "nextPos": 53,
                                "pos": 50,
                                "tag": "UnquotedIdentifier",
                                "value": "int",
                              },
                            ],
                          },
                        ],
                      },
                    ],
                  },
                  Object {
                    "nextPos": 61,
                    "pos": 55,
                    "tag": "PgCast",
                    "values": Array [
                      Object {
                        "nextPos": 56,
                        "pos": 55,
                        "tag": "Number",
                        "value": "4",
                      },
                      Object {
                        "nextPos": 61,
                        "pos": 58,
                        "tag": "Type",
                        "values": Array [
                          Object {
                            "nextPos": 61,
                            "pos": 58,
                            "tag": "QualifiedIdentifier",
                            "values": Array [
                              Object {
                                "nextPos": 61,
                                "pos": 58,
                                "tag": "UnquotedIdentifier",
                                "value": "int",
                              },
                            ],
                          },
                        ],
                      },
                    ],
                  },
                ],
              },
            ],
          },
        ],
      },
      "type": "Values",
      "types": Array [
        Object {
          "name": "id",
          "type": "Named",
          "value": Object {
            "name": "int4",
            "type": "Named",
            "value": Object {
              "type": "Number",
            },
          },
        },
        Object {
          "name": "val",
          "type": "Named",
          "value": Object {
            "name": "int4",
            "type": "Named",
            "value": Object {
              "type": "Number",
            },
          },
        },
      ],
    },
    Object {
      "isResult": true,
      "name": "ins",
      "schema": undefined,
      "sourceTag": Object {
        "nextPos": 81,
        "pos": 78,
        "tag": "Table",
        "values": Array [
          Object {
            "nextPos": 81,
            "pos": 78,
            "tag": "QualifiedIdentifier",
            "values": Array [
              Object {
                "nextPos": 81,
                "pos": 78,
                "tag": "UnquotedIdentifier",
                "value": "ins",
              },
            ],
          },
        ],
      },
      "table": "ins",
      "type": "Table",
    },
  ],
}
`;

exports[`Query Interface Should convert delete with param sql (DELETE FROM table1 WHERE id = :id) 1`] = `
Object {
  "params": Array [
    Object {
      "name": "id",
      "nextPos": 33,
      "pick": Array [],
      "pos": 30,
      "required": false,
      "spread": false,
      "type": Object {
        "column": "id",
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 27,
          "pos": 25,
          "tag": "Column",
          "values": Array [
            Object {
              "nextPos": 27,
              "pos": 25,
              "tag": "UnquotedIdentifier",
              "value": "id",
            },
          ],
        },
        "table": "table1",
        "type": "LoadColumn",
      },
    },
  ],
  "results": Array [],
  "sources": Array [
    Object {
      "isResult": true,
      "name": "table1",
      "schema": undefined,
      "sourceTag": Object {
        "nextPos": 18,
        "pos": 12,
        "tag": "Table",
        "values": Array [
          Object {
            "nextPos": 18,
            "pos": 12,
            "tag": "QualifiedIdentifier",
            "values": Array [
              Object {
                "nextPos": 18,
                "pos": 12,
                "tag": "UnquotedIdentifier",
                "value": "table1",
              },
            ],
          },
        ],
      },
      "table": "table1",
      "type": "Table",
    },
  ],
}
`;

exports[`Query Interface Should convert delete with returning sql (DELETE FROM table1 RETURNING id, col2) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "id",
      "type": Object {
        "column": "id",
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 31,
          "pos": 29,
          "tag": "Column",
          "values": Array [
            Object {
              "nextPos": 31,
              "pos": 29,
              "tag": "UnquotedIdentifier",
              "value": "id",
            },
          ],
        },
        "table": "table1",
        "type": "LoadColumn",
      },
    },
    Object {
      "name": "col2",
      "type": Object {
        "column": "col2",
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 37,
          "pos": 33,
          "tag": "Column",
          "values": Array [
            Object {
              "nextPos": 37,
              "pos": 33,
              "tag": "UnquotedIdentifier",
              "value": "col2",
            },
          ],
        },
        "table": "table1",
        "type": "LoadColumn",
      },
    },
  ],
  "sources": Array [
    Object {
      "isResult": true,
      "name": "table1",
      "schema": undefined,
      "sourceTag": Object {
        "nextPos": 18,
        "pos": 12,
        "tag": "Table",
        "values": Array [
          Object {
            "nextPos": 18,
            "pos": 12,
            "tag": "QualifiedIdentifier",
            "values": Array [
              Object {
                "nextPos": 18,
                "pos": 12,
                "tag": "UnquotedIdentifier",
                "value": "table1",
              },
            ],
          },
        ],
      },
      "table": "table1",
      "type": "Table",
    },
  ],
}
`;

exports[`Query Interface Should convert double percision sql (SELECT '123'::double precision) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "float8",
      "type": Object {
        "name": "float8",
        "type": "Named",
        "value": Object {
          "type": "Number",
        },
      },
    },
  ],
  "sources": Array [],
}
`;

exports[`Query Interface Should convert enum type sql (SELECT id::custom_type FROM table1) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "id",
      "type": Object {
        "column": Object {
          "column": "id",
          "schema": undefined,
          "sourceTag": Object {
            "nextPos": 9,
            "pos": 7,
            "tag": "Column",
            "values": Array [
              Object {
                "nextPos": 9,
                "pos": 7,
                "tag": "UnquotedIdentifier",
                "value": "id",
              },
            ],
          },
          "table": undefined,
          "type": "LoadColumn",
        },
        "type": "LoadColumnCast",
        "value": Object {
          "name": "custom_type",
          "schema": undefined,
          "sourceTag": Object {
            "nextPos": 22,
            "pos": 11,
            "tag": "Type",
            "values": Array [
              Object {
                "nextPos": 22,
                "pos": 11,
                "tag": "QualifiedIdentifier",
                "values": Array [
                  Object {
                    "nextPos": 22,
                    "pos": 11,
                    "tag": "UnquotedIdentifier",
                    "value": "custom_type",
                  },
                ],
              },
            ],
          },
          "type": "LoadRecord",
        },
      },
    },
  ],
  "sources": Array [
    Object {
      "isResult": true,
      "name": "table1",
      "schema": undefined,
      "sourceTag": Object {
        "nextPos": 34,
        "pos": 28,
        "tag": "Table",
        "values": Array [
          Object {
            "nextPos": 34,
            "pos": 28,
            "tag": "QualifiedIdentifier",
            "values": Array [
              Object {
                "nextPos": 34,
                "pos": 28,
                "tag": "UnquotedIdentifier",
                "value": "table1",
              },
            ],
          },
        ],
      },
      "table": "table1",
      "type": "Table",
    },
  ],
}
`;

exports[`Query Interface Should convert function param sql (SELECT ABS($id) FROM table1) 1`] = `
Object {
  "params": Array [
    Object {
      "name": "id",
      "nextPos": 14,
      "pick": Array [],
      "pos": 11,
      "required": false,
      "spread": false,
      "type": Object {
        "args": Array [
          Object {
            "type": "Any",
          },
        ],
        "index": 0,
        "name": "abs",
        "sourceTag": Object {
          "nextPos": 14,
          "pick": Array [],
          "pos": 11,
          "required": false,
          "tag": "Parameter",
          "type": "single",
          "value": "id",
        },
        "type": "LoadFunctionArgument",
      },
    },
  ],
  "results": Array [
    Object {
      "name": "abs",
      "type": Object {
        "args": Array [
          Object {
            "type": "Any",
          },
        ],
        "name": "abs",
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 15,
          "pos": 7,
          "tag": "Function",
          "values": Array [
            Object {
              "nextPos": 10,
              "pos": 7,
              "tag": "QualifiedIdentifier",
              "values": Array [
                Object {
                  "nextPos": 10,
                  "pos": 7,
                  "tag": "UnquotedIdentifier",
                  "value": "ABS",
                },
              ],
            },
            Object {
              "nextPos": 14,
              "pick": Array [],
              "pos": 11,
              "required": false,
              "tag": "Parameter",
              "type": "single",
              "value": "id",
            },
          ],
        },
        "type": "LoadFunction",
      },
    },
  ],
  "sources": Array [
    Object {
      "isResult": true,
      "name": "table1",
      "schema": undefined,
      "sourceTag": Object {
        "nextPos": 27,
        "pos": 21,
        "tag": "Table",
        "values": Array [
          Object {
            "nextPos": 27,
            "pos": 21,
            "tag": "QualifiedIdentifier",
            "values": Array [
              Object {
                "nextPos": 27,
                "pos": 21,
                "tag": "UnquotedIdentifier",
                "value": "table1",
              },
            ],
          },
        ],
      },
      "table": "table1",
      "type": "Table",
    },
  ],
}
`;

exports[`Query Interface Should convert function sql (SELECT ABS(id) FROM table1) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "abs",
      "type": Object {
        "args": Array [
          Object {
            "column": "id",
            "schema": undefined,
            "sourceTag": Object {
              "nextPos": 13,
              "pos": 11,
              "tag": "Column",
              "values": Array [
                Object {
                  "nextPos": 13,
                  "pos": 11,
                  "tag": "UnquotedIdentifier",
                  "value": "id",
                },
              ],
            },
            "table": undefined,
            "type": "LoadColumn",
          },
        ],
        "name": "abs",
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 14,
          "pos": 7,
          "tag": "Function",
          "values": Array [
            Object {
              "nextPos": 10,
              "pos": 7,
              "tag": "QualifiedIdentifier",
              "values": Array [
                Object {
                  "nextPos": 10,
                  "pos": 7,
                  "tag": "UnquotedIdentifier",
                  "value": "ABS",
                },
              ],
            },
            Object {
              "nextPos": 13,
              "pos": 11,
              "tag": "Column",
              "values": Array [
                Object {
                  "nextPos": 13,
                  "pos": 11,
                  "tag": "UnquotedIdentifier",
                  "value": "id",
                },
              ],
            },
          ],
        },
        "type": "LoadFunction",
      },
    },
  ],
  "sources": Array [
    Object {
      "isResult": true,
      "name": "table1",
      "schema": undefined,
      "sourceTag": Object {
        "nextPos": 26,
        "pos": 20,
        "tag": "Table",
        "values": Array [
          Object {
            "nextPos": 26,
            "pos": 20,
            "tag": "QualifiedIdentifier",
            "values": Array [
              Object {
                "nextPos": 26,
                "pos": 20,
                "tag": "UnquotedIdentifier",
                "value": "table1",
              },
            ],
          },
        ],
      },
      "table": "table1",
      "type": "Table",
    },
  ],
}
`;

exports[`Query Interface Should convert function with schema sql (SELECT information_schema._pg_char_max_length('123')) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "_pg_char_max_length",
      "type": Object {
        "args": Array [
          Object {
            "literal": "123",
            "type": "String",
          },
        ],
        "name": "_pg_char_max_length",
        "schema": "information_schema",
        "sourceTag": Object {
          "nextPos": 52,
          "pos": 7,
          "tag": "Function",
          "values": Array [
            Object {
              "nextPos": 45,
              "pos": 7,
              "tag": "QualifiedIdentifier",
              "values": Array [
                Object {
                  "nextPos": 25,
                  "pos": 7,
                  "tag": "UnquotedIdentifier",
                  "value": "information_schema",
                },
                Object {
                  "nextPos": 45,
                  "pos": 26,
                  "tag": "UnquotedIdentifier",
                  "value": "_pg_char_max_length",
                },
              ],
            },
            Object {
              "nextPos": 51,
              "pos": 46,
              "tag": "String",
              "value": "123",
            },
          ],
        },
        "type": "LoadFunction",
      },
    },
  ],
  "sources": Array [],
}
`;

exports[`Query Interface Should convert function with star sql (SELECT information_schema._pg_truetypmod(a.*, t.*) FROM table1) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "_pg_truetypmod",
      "type": Object {
        "args": Array [
          Object {
            "schema": undefined,
            "sourceTag": Object {
              "nextPos": 44,
              "pos": 41,
              "tag": "StarIdentifier",
              "values": Array [
                Object {
                  "nextPos": 42,
                  "pos": 41,
                  "tag": "UnquotedIdentifier",
                  "value": "a",
                },
                Object {
                  "nextPos": 44,
                  "pos": 43,
                  "tag": "Star",
                },
              ],
            },
            "table": "a",
            "type": "LoadStar",
          },
          Object {
            "schema": undefined,
            "sourceTag": Object {
              "nextPos": 49,
              "pos": 46,
              "tag": "StarIdentifier",
              "values": Array [
                Object {
                  "nextPos": 47,
                  "pos": 46,
                  "tag": "UnquotedIdentifier",
                  "value": "t",
                },
                Object {
                  "nextPos": 49,
                  "pos": 48,
                  "tag": "Star",
                },
              ],
            },
            "table": "t",
            "type": "LoadStar",
          },
        ],
        "name": "_pg_truetypmod",
        "schema": "information_schema",
        "sourceTag": Object {
          "nextPos": 50,
          "pos": 7,
          "tag": "Function",
          "values": Array [
            Object {
              "nextPos": 40,
              "pos": 7,
              "tag": "QualifiedIdentifier",
              "values": Array [
                Object {
                  "nextPos": 25,
                  "pos": 7,
                  "tag": "UnquotedIdentifier",
                  "value": "information_schema",
                },
                Object {
                  "nextPos": 40,
                  "pos": 26,
                  "tag": "UnquotedIdentifier",
                  "value": "_pg_truetypmod",
                },
              ],
            },
            Object {
              "nextPos": 44,
              "pos": 41,
              "tag": "StarIdentifier",
              "values": Array [
                Object {
                  "nextPos": 42,
                  "pos": 41,
                  "tag": "UnquotedIdentifier",
                  "value": "a",
                },
                Object {
                  "nextPos": 44,
                  "pos": 43,
                  "tag": "Star",
                },
              ],
            },
            Object {
              "nextPos": 49,
              "pos": 46,
              "tag": "StarIdentifier",
              "values": Array [
                Object {
                  "nextPos": 47,
                  "pos": 46,
                  "tag": "UnquotedIdentifier",
                  "value": "t",
                },
                Object {
                  "nextPos": 49,
                  "pos": 48,
                  "tag": "Star",
                },
              ],
            },
          ],
        },
        "type": "LoadFunction",
      },
    },
  ],
  "sources": Array [
    Object {
      "isResult": true,
      "name": "table1",
      "schema": undefined,
      "sourceTag": Object {
        "nextPos": 62,
        "pos": 56,
        "tag": "Table",
        "values": Array [
          Object {
            "nextPos": 62,
            "pos": 56,
            "tag": "QualifiedIdentifier",
            "values": Array [
              Object {
                "nextPos": 62,
                "pos": 56,
                "tag": "UnquotedIdentifier",
                "value": "table1",
              },
            ],
          },
        ],
      },
      "table": "table1",
      "type": "Table",
    },
  ],
}
`;

exports[`Query Interface Should convert insert multiple param values sql (INSERT INTO table1 VALUES $$rows(name, test)) 1`] = `
Object {
  "params": Array [
    Object {
      "name": "rows",
      "nextPos": 44,
      "pick": Array [
        Object {
          "name": "name",
          "type": Object {
            "type": "Unknown",
          },
        },
        Object {
          "name": "test",
          "type": Object {
            "type": "Unknown",
          },
        },
      ],
      "pos": 26,
      "required": true,
      "spread": true,
      "type": Object {
        "type": "Unknown",
      },
    },
  ],
  "results": Array [],
  "sources": Array [
    Object {
      "isResult": true,
      "name": "table1",
      "schema": undefined,
      "sourceTag": Object {
        "nextPos": 18,
        "pos": 12,
        "tag": "Table",
        "values": Array [
          Object {
            "nextPos": 18,
            "pos": 12,
            "tag": "QualifiedIdentifier",
            "values": Array [
              Object {
                "nextPos": 18,
                "pos": 12,
                "tag": "UnquotedIdentifier",
                "value": "table1",
              },
            ],
          },
        ],
      },
      "table": "table1",
      "type": "Table",
    },
  ],
}
`;

exports[`Query Interface Should convert insert returning star sql (INSERT INTO table1 (id) VALUES (1),(2) RETURNING *) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "?column?",
      "type": Object {
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 50,
          "pos": 49,
          "tag": "StarIdentifier",
          "values": Array [
            Object {
              "nextPos": 50,
              "pos": 49,
              "tag": "Star",
            },
          ],
        },
        "table": undefined,
        "type": "LoadStar",
      },
    },
  ],
  "sources": Array [
    Object {
      "isResult": true,
      "name": "table1",
      "schema": undefined,
      "sourceTag": Object {
        "nextPos": 18,
        "pos": 12,
        "tag": "Table",
        "values": Array [
          Object {
            "nextPos": 18,
            "pos": 12,
            "tag": "QualifiedIdentifier",
            "values": Array [
              Object {
                "nextPos": 18,
                "pos": 12,
                "tag": "UnquotedIdentifier",
                "value": "table1",
              },
            ],
          },
        ],
      },
      "table": "table1",
      "type": "Table",
    },
  ],
}
`;

exports[`Query Interface Should convert join fields sql (
        SELECT
          t1.col1 as "col1",
          t1.col2 as "myCol2",
          table2.col2 as "other"
        FROM table1 AS t1
        JOIN table2 ON table2.id = table1.id
      ) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "col1",
      "type": Object {
        "column": "col1",
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 33,
          "pos": 26,
          "tag": "Column",
          "values": Array [
            Object {
              "nextPos": 28,
              "pos": 26,
              "tag": "UnquotedIdentifier",
              "value": "t1",
            },
            Object {
              "nextPos": 33,
              "pos": 29,
              "tag": "UnquotedIdentifier",
              "value": "col1",
            },
          ],
        },
        "table": "t1",
        "type": "LoadColumn",
      },
    },
    Object {
      "name": "myCol2",
      "type": Object {
        "column": "col2",
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 62,
          "pos": 55,
          "tag": "Column",
          "values": Array [
            Object {
              "nextPos": 57,
              "pos": 55,
              "tag": "UnquotedIdentifier",
              "value": "t1",
            },
            Object {
              "nextPos": 62,
              "pos": 58,
              "tag": "UnquotedIdentifier",
              "value": "col2",
            },
          ],
        },
        "table": "t1",
        "type": "LoadColumn",
      },
    },
    Object {
      "name": "other",
      "type": Object {
        "column": "col2",
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 97,
          "pos": 86,
          "tag": "Column",
          "values": Array [
            Object {
              "nextPos": 92,
              "pos": 86,
              "tag": "UnquotedIdentifier",
              "value": "table2",
            },
            Object {
              "nextPos": 97,
              "pos": 93,
              "tag": "UnquotedIdentifier",
              "value": "col2",
            },
          ],
        },
        "table": "table2",
        "type": "LoadColumn",
      },
    },
  ],
  "sources": Array [
    Object {
      "isResult": true,
      "name": "t1",
      "schema": undefined,
      "sourceTag": Object {
        "nextPos": 134,
        "pos": 122,
        "tag": "Table",
        "values": Array [
          Object {
            "nextPos": 128,
            "pos": 122,
            "tag": "QualifiedIdentifier",
            "values": Array [
              Object {
                "nextPos": 128,
                "pos": 122,
                "tag": "UnquotedIdentifier",
                "value": "table1",
              },
            ],
          },
          Object {
            "nextPos": 134,
            "pos": 129,
            "tag": "As",
            "values": Array [
              Object {
                "nextPos": 134,
                "pos": 132,
                "tag": "UnquotedIdentifier",
                "value": "t1",
              },
            ],
          },
        ],
      },
      "table": "table1",
      "type": "Table",
    },
    Object {
      "isResult": true,
      "name": "table2",
      "schema": undefined,
      "sourceTag": Object {
        "nextPos": 154,
        "pos": 148,
        "tag": "Table",
        "values": Array [
          Object {
            "nextPos": 154,
            "pos": 148,
            "tag": "QualifiedIdentifier",
            "values": Array [
              Object {
                "nextPos": 154,
                "pos": 148,
                "tag": "UnquotedIdentifier",
                "value": "table2",
              },
            ],
          },
        ],
      },
      "table": "table2",
      "type": "Table",
    },
  ],
}
`;

exports[`Query Interface Should convert join with aliases fields sql (
        SELECT
          t1.col1 as "col1",
          t1.col2 as "myCol2",
          myT2.col2 as "other",
          myT4.col_9 as "test"
        FROM fit.table1 AS t1
        JOIN fit.table2 as "myT2" ON table2.id = table1.id
        JOIN table3 as "myT4" ON myT2.id = table1.id
      ) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "col1",
      "type": Object {
        "column": "col1",
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 33,
          "pos": 26,
          "tag": "Column",
          "values": Array [
            Object {
              "nextPos": 28,
              "pos": 26,
              "tag": "UnquotedIdentifier",
              "value": "t1",
            },
            Object {
              "nextPos": 33,
              "pos": 29,
              "tag": "UnquotedIdentifier",
              "value": "col1",
            },
          ],
        },
        "table": "t1",
        "type": "LoadColumn",
      },
    },
    Object {
      "name": "myCol2",
      "type": Object {
        "column": "col2",
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 62,
          "pos": 55,
          "tag": "Column",
          "values": Array [
            Object {
              "nextPos": 57,
              "pos": 55,
              "tag": "UnquotedIdentifier",
              "value": "t1",
            },
            Object {
              "nextPos": 62,
              "pos": 58,
              "tag": "UnquotedIdentifier",
              "value": "col2",
            },
          ],
        },
        "table": "t1",
        "type": "LoadColumn",
      },
    },
    Object {
      "name": "other",
      "type": Object {
        "column": "col2",
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 95,
          "pos": 86,
          "tag": "Column",
          "values": Array [
            Object {
              "nextPos": 90,
              "pos": 86,
              "tag": "UnquotedIdentifier",
              "value": "myT2",
            },
            Object {
              "nextPos": 95,
              "pos": 91,
              "tag": "UnquotedIdentifier",
              "value": "col2",
            },
          ],
        },
        "table": "myT2",
        "type": "LoadColumn",
      },
    },
    Object {
      "name": "test",
      "type": Object {
        "column": "col_9",
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 128,
          "pos": 118,
          "tag": "Column",
          "values": Array [
            Object {
              "nextPos": 122,
              "pos": 118,
              "tag": "UnquotedIdentifier",
              "value": "myT4",
            },
            Object {
              "nextPos": 128,
              "pos": 123,
              "tag": "UnquotedIdentifier",
              "value": "col_9",
            },
          ],
        },
        "table": "myT4",
        "type": "LoadColumn",
      },
    },
  ],
  "sources": Array [
    Object {
      "isResult": true,
      "name": "t1",
      "schema": "fit",
      "sourceTag": Object {
        "nextPos": 168,
        "pos": 152,
        "tag": "Table",
        "values": Array [
          Object {
            "nextPos": 162,
            "pos": 152,
            "tag": "QualifiedIdentifier",
            "values": Array [
              Object {
                "nextPos": 155,
                "pos": 152,
                "tag": "UnquotedIdentifier",
                "value": "fit",
              },
              Object {
                "nextPos": 162,
                "pos": 156,
                "tag": "UnquotedIdentifier",
                "value": "table1",
              },
            ],
          },
          Object {
            "nextPos": 168,
            "pos": 163,
            "tag": "As",
            "values": Array [
              Object {
                "nextPos": 168,
                "pos": 166,
                "tag": "UnquotedIdentifier",
                "value": "t1",
              },
            ],
          },
        ],
      },
      "table": "table1",
      "type": "Table",
    },
    Object {
      "isResult": true,
      "name": "myT2",
      "schema": "fit",
      "sourceTag": Object {
        "nextPos": 202,
        "pos": 182,
        "tag": "Table",
        "values": Array [
          Object {
            "nextPos": 192,
            "pos": 182,
            "tag": "QualifiedIdentifier",
            "values": Array [
              Object {
                "nextPos": 185,
                "pos": 182,
                "tag": "UnquotedIdentifier",
                "value": "fit",
              },
              Object {
                "nextPos": 192,
                "pos": 186,
                "tag": "UnquotedIdentifier",
                "value": "table2",
              },
            ],
          },
          Object {
            "nextPos": 202,
            "pos": 193,
            "tag": "As",
            "values": Array [
              Object {
                "nextPos": 202,
                "pos": 196,
                "tag": "QuotedIdentifier",
                "value": "myT2",
              },
            ],
          },
        ],
      },
      "table": "table2",
      "type": "Table",
    },
    Object {
      "isResult": true,
      "name": "myT4",
      "schema": undefined,
      "sourceTag": Object {
        "nextPos": 257,
        "pos": 241,
        "tag": "Table",
        "values": Array [
          Object {
            "nextPos": 247,
            "pos": 241,
            "tag": "QualifiedIdentifier",
            "values": Array [
              Object {
                "nextPos": 247,
                "pos": 241,
                "tag": "UnquotedIdentifier",
                "value": "table3",
              },
            ],
          },
          Object {
            "nextPos": 257,
            "pos": 248,
            "tag": "As",
            "values": Array [
              Object {
                "nextPos": 257,
                "pos": 251,
                "tag": "QuotedIdentifier",
                "value": "myT4",
              },
            ],
          },
        ],
      },
      "table": "table3",
      "type": "Table",
    },
  ],
}
`;

exports[`Query Interface Should convert limit and offset params sql (SELECT id FROM table1 LIMIT :limit OFFSET :offset::int) 1`] = `
Object {
  "params": Array [
    Object {
      "name": "limit",
      "nextPos": 34,
      "pick": Array [],
      "pos": 28,
      "required": false,
      "spread": false,
      "type": Object {
        "type": "String",
      },
    },
    Object {
      "name": "offset",
      "nextPos": 49,
      "pick": Array [],
      "pos": 42,
      "required": false,
      "spread": false,
      "type": Object {
        "name": "int4",
        "type": "Named",
        "value": Object {
          "type": "Number",
        },
      },
    },
  ],
  "results": Array [
    Object {
      "name": "id",
      "type": Object {
        "column": "id",
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 9,
          "pos": 7,
          "tag": "Column",
          "values": Array [
            Object {
              "nextPos": 9,
              "pos": 7,
              "tag": "UnquotedIdentifier",
              "value": "id",
            },
          ],
        },
        "table": undefined,
        "type": "LoadColumn",
      },
    },
  ],
  "sources": Array [
    Object {
      "isResult": true,
      "name": "table1",
      "schema": undefined,
      "sourceTag": Object {
        "nextPos": 21,
        "pos": 15,
        "tag": "Table",
        "values": Array [
          Object {
            "nextPos": 21,
            "pos": 15,
            "tag": "QualifiedIdentifier",
            "values": Array [
              Object {
                "nextPos": 21,
                "pos": 15,
                "tag": "UnquotedIdentifier",
                "value": "table1",
              },
            ],
          },
        ],
      },
      "table": "table1",
      "type": "Table",
    },
  ],
}
`;

exports[`Query Interface Should convert multiple params infer type from one 1 sql (SELECT col1 FROM table1 WHERE :id = table1.id AND :id) 1`] = `
Object {
  "params": Array [
    Object {
      "name": "id",
      "nextPos": 33,
      "pick": Array [],
      "pos": 30,
      "required": false,
      "spread": false,
      "type": Object {
        "column": "id",
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 45,
          "pos": 36,
          "tag": "Column",
          "values": Array [
            Object {
              "nextPos": 42,
              "pos": 36,
              "tag": "UnquotedIdentifier",
              "value": "table1",
            },
            Object {
              "nextPos": 45,
              "pos": 43,
              "tag": "UnquotedIdentifier",
              "value": "id",
            },
          ],
        },
        "table": "table1",
        "type": "LoadColumn",
      },
    },
    Object {
      "name": "id",
      "nextPos": 53,
      "pick": Array [],
      "pos": 50,
      "required": false,
      "spread": false,
      "type": Object {
        "type": "Any",
      },
    },
  ],
  "results": Array [
    Object {
      "name": "col1",
      "type": Object {
        "column": "col1",
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 11,
          "pos": 7,
          "tag": "Column",
          "values": Array [
            Object {
              "nextPos": 11,
              "pos": 7,
              "tag": "UnquotedIdentifier",
              "value": "col1",
            },
          ],
        },
        "table": undefined,
        "type": "LoadColumn",
      },
    },
  ],
  "sources": Array [
    Object {
      "isResult": true,
      "name": "table1",
      "schema": undefined,
      "sourceTag": Object {
        "nextPos": 23,
        "pos": 17,
        "tag": "Table",
        "values": Array [
          Object {
            "nextPos": 23,
            "pos": 17,
            "tag": "QualifiedIdentifier",
            "values": Array [
              Object {
                "nextPos": 23,
                "pos": 17,
                "tag": "UnquotedIdentifier",
                "value": "table1",
              },
            ],
          },
        ],
      },
      "table": "table1",
      "type": "Table",
    },
  ],
}
`;

exports[`Query Interface Should convert multiple params infer type from one 2 sql (SELECT col1 FROM table1 WHERE :id IS NOT NULL OR :id = table1.id) 1`] = `
Object {
  "params": Array [
    Object {
      "name": "id",
      "nextPos": 33,
      "pick": Array [],
      "pos": 30,
      "required": false,
      "spread": false,
      "type": Object {
        "type": "Any",
      },
    },
    Object {
      "name": "id",
      "nextPos": 52,
      "pick": Array [],
      "pos": 49,
      "required": false,
      "spread": false,
      "type": Object {
        "column": "id",
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 64,
          "pos": 55,
          "tag": "Column",
          "values": Array [
            Object {
              "nextPos": 61,
              "pos": 55,
              "tag": "UnquotedIdentifier",
              "value": "table1",
            },
            Object {
              "nextPos": 64,
              "pos": 62,
              "tag": "UnquotedIdentifier",
              "value": "id",
            },
          ],
        },
        "table": "table1",
        "type": "LoadColumn",
      },
    },
  ],
  "results": Array [
    Object {
      "name": "col1",
      "type": Object {
        "column": "col1",
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 11,
          "pos": 7,
          "tag": "Column",
          "values": Array [
            Object {
              "nextPos": 11,
              "pos": 7,
              "tag": "UnquotedIdentifier",
              "value": "col1",
            },
          ],
        },
        "table": undefined,
        "type": "LoadColumn",
      },
    },
  ],
  "sources": Array [
    Object {
      "isResult": true,
      "name": "table1",
      "schema": undefined,
      "sourceTag": Object {
        "nextPos": 23,
        "pos": 17,
        "tag": "Table",
        "values": Array [
          Object {
            "nextPos": 23,
            "pos": 17,
            "tag": "QualifiedIdentifier",
            "values": Array [
              Object {
                "nextPos": 23,
                "pos": 17,
                "tag": "UnquotedIdentifier",
                "value": "table1",
              },
            ],
          },
        ],
      },
      "table": "table1",
      "type": "Table",
    },
  ],
}
`;

exports[`Query Interface Should convert multiple params sql (SELECT :test1 AS "res1", :test2) 1`] = `
Object {
  "params": Array [
    Object {
      "name": "test1",
      "nextPos": 13,
      "pick": Array [],
      "pos": 7,
      "required": false,
      "spread": false,
      "type": Object {
        "type": "Unknown",
      },
    },
    Object {
      "name": "test2",
      "nextPos": 31,
      "pick": Array [],
      "pos": 25,
      "required": false,
      "spread": false,
      "type": Object {
        "type": "Unknown",
      },
    },
  ],
  "results": Array [
    Object {
      "name": "res1",
      "type": Object {
        "type": "Any",
      },
    },
    Object {
      "name": "?column?",
      "type": Object {
        "type": "Any",
      },
    },
  ],
  "sources": Array [],
}
`;

exports[`Query Interface Should convert nested functions sql (SELECT ABS(ARRAY_LENGTH(ARRAY_AGG(integer_col), 1)) FROM all_types GROUP BY id) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "abs",
      "type": Object {
        "args": Array [
          Object {
            "args": Array [
              Object {
                "items": Object {
                  "column": "integer_col",
                  "schema": undefined,
                  "sourceTag": Object {
                    "nextPos": 45,
                    "pos": 34,
                    "tag": "Column",
                    "values": Array [
                      Object {
                        "nextPos": 45,
                        "pos": 34,
                        "tag": "UnquotedIdentifier",
                        "value": "integer_col",
                      },
                    ],
                  },
                  "table": undefined,
                  "type": "LoadColumn",
                },
                "type": "ToArray",
              },
              Object {
                "literal": 1,
                "type": "Number",
              },
            ],
            "name": "array_length",
            "schema": undefined,
            "sourceTag": Object {
              "nextPos": 50,
              "pos": 11,
              "tag": "Function",
              "values": Array [
                Object {
                  "nextPos": 23,
                  "pos": 11,
                  "tag": "QualifiedIdentifier",
                  "values": Array [
                    Object {
                      "nextPos": 23,
                      "pos": 11,
                      "tag": "UnquotedIdentifier",
                      "value": "ARRAY_LENGTH",
                    },
                  ],
                },
                Object {
                  "nextPos": 46,
                  "pos": 24,
                  "tag": "Function",
                  "values": Array [
                    Object {
                      "nextPos": 33,
                      "pos": 24,
                      "tag": "QualifiedIdentifier",
                      "values": Array [
                        Object {
                          "nextPos": 33,
                          "pos": 24,
                          "tag": "UnquotedIdentifier",
                          "value": "ARRAY_AGG",
                        },
                      ],
                    },
                    Object {
                      "nextPos": 45,
                      "pos": 34,
                      "tag": "Column",
                      "values": Array [
                        Object {
                          "nextPos": 45,
                          "pos": 34,
                          "tag": "UnquotedIdentifier",
                          "value": "integer_col",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "nextPos": 49,
                  "pos": 48,
                  "tag": "Number",
                  "value": "1",
                },
              ],
            },
            "type": "LoadFunction",
          },
        ],
        "name": "abs",
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 51,
          "pos": 7,
          "tag": "Function",
          "values": Array [
            Object {
              "nextPos": 10,
              "pos": 7,
              "tag": "QualifiedIdentifier",
              "values": Array [
                Object {
                  "nextPos": 10,
                  "pos": 7,
                  "tag": "UnquotedIdentifier",
                  "value": "ABS",
                },
              ],
            },
            Object {
              "nextPos": 50,
              "pos": 11,
              "tag": "Function",
              "values": Array [
                Object {
                  "nextPos": 23,
                  "pos": 11,
                  "tag": "QualifiedIdentifier",
                  "values": Array [
                    Object {
                      "nextPos": 23,
                      "pos": 11,
                      "tag": "UnquotedIdentifier",
                      "value": "ARRAY_LENGTH",
                    },
                  ],
                },
                Object {
                  "nextPos": 46,
                  "pos": 24,
                  "tag": "Function",
                  "values": Array [
                    Object {
                      "nextPos": 33,
                      "pos": 24,
                      "tag": "QualifiedIdentifier",
                      "values": Array [
                        Object {
                          "nextPos": 33,
                          "pos": 24,
                          "tag": "UnquotedIdentifier",
                          "value": "ARRAY_AGG",
                        },
                      ],
                    },
                    Object {
                      "nextPos": 45,
                      "pos": 34,
                      "tag": "Column",
                      "values": Array [
                        Object {
                          "nextPos": 45,
                          "pos": 34,
                          "tag": "UnquotedIdentifier",
                          "value": "integer_col",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "nextPos": 49,
                  "pos": 48,
                  "tag": "Number",
                  "value": "1",
                },
              ],
            },
          ],
        },
        "type": "LoadFunction",
      },
    },
  ],
  "sources": Array [
    Object {
      "isResult": true,
      "name": "all_types",
      "schema": undefined,
      "sourceTag": Object {
        "nextPos": 66,
        "pos": 57,
        "tag": "Table",
        "values": Array [
          Object {
            "nextPos": 66,
            "pos": 57,
            "tag": "QualifiedIdentifier",
            "values": Array [
              Object {
                "nextPos": 66,
                "pos": 57,
                "tag": "UnquotedIdentifier",
                "value": "all_types",
              },
            ],
          },
        ],
      },
      "table": "all_types",
      "type": "Table",
    },
  ],
}
`;

exports[`Query Interface Should convert nested select sql (
        SELECT
          col1 AS "res1",
          (SELECT id FROM table2 JOIN table3 ON table3.id = table2.id AND table3.val > :joinVal LIMIT 1)
        FROM table1
        WHERE :id = table1.id
      ) 1`] = `
Object {
  "params": Array [
    Object {
      "name": "joinVal",
      "nextPos": 137,
      "pick": Array [],
      "pos": 129,
      "required": false,
      "spread": false,
      "type": Object {
        "column": "val",
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 126,
          "pos": 116,
          "tag": "Column",
          "values": Array [
            Object {
              "nextPos": 122,
              "pos": 116,
              "tag": "UnquotedIdentifier",
              "value": "table3",
            },
            Object {
              "nextPos": 126,
              "pos": 123,
              "tag": "UnquotedIdentifier",
              "value": "val",
            },
          ],
        },
        "table": "table3",
        "type": "LoadColumn",
      },
    },
    Object {
      "name": "id",
      "nextPos": 184,
      "pick": Array [],
      "pos": 181,
      "required": false,
      "spread": false,
      "type": Object {
        "column": "id",
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 196,
          "pos": 187,
          "tag": "Column",
          "values": Array [
            Object {
              "nextPos": 193,
              "pos": 187,
              "tag": "UnquotedIdentifier",
              "value": "table1",
            },
            Object {
              "nextPos": 196,
              "pos": 194,
              "tag": "UnquotedIdentifier",
              "value": "id",
            },
          ],
        },
        "table": "table1",
        "type": "LoadColumn",
      },
    },
  ],
  "results": Array [
    Object {
      "name": "res1",
      "type": Object {
        "column": "col1",
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 30,
          "pos": 26,
          "tag": "Column",
          "values": Array [
            Object {
              "nextPos": 30,
              "pos": 26,
              "tag": "UnquotedIdentifier",
              "value": "col1",
            },
          ],
        },
        "table": undefined,
        "type": "LoadColumn",
      },
    },
    Object {
      "name": "id",
      "type": Object {
        "nullable": true,
        "type": "Optional",
        "value": Object {
          "column": "id",
          "schema": undefined,
          "sourceTag": Object {
            "nextPos": 62,
            "pos": 60,
            "tag": "Column",
            "values": Array [
              Object {
                "nextPos": 62,
                "pos": 60,
                "tag": "UnquotedIdentifier",
                "value": "id",
              },
            ],
          },
          "table": undefined,
          "type": "LoadColumn",
        },
      },
    },
  ],
  "sources": Array [
    Object {
      "isResult": true,
      "name": "table2",
      "schema": undefined,
      "sourceTag": Object {
        "nextPos": 74,
        "pos": 68,
        "tag": "Table",
        "values": Array [
          Object {
            "nextPos": 74,
            "pos": 68,
            "tag": "QualifiedIdentifier",
            "values": Array [
              Object {
                "nextPos": 74,
                "pos": 68,
                "tag": "UnquotedIdentifier",
                "value": "table2",
              },
            ],
          },
        ],
      },
      "table": "table2",
      "type": "Table",
    },
    Object {
      "isResult": true,
      "name": "table3",
      "schema": undefined,
      "sourceTag": Object {
        "nextPos": 86,
        "pos": 80,
        "tag": "Table",
        "values": Array [
          Object {
            "nextPos": 86,
            "pos": 80,
            "tag": "QualifiedIdentifier",
            "values": Array [
              Object {
                "nextPos": 86,
                "pos": 80,
                "tag": "UnquotedIdentifier",
                "value": "table3",
              },
            ],
          },
        ],
      },
      "table": "table3",
      "type": "Table",
    },
    Object {
      "isResult": true,
      "name": "table1",
      "schema": undefined,
      "sourceTag": Object {
        "nextPos": 166,
        "pos": 160,
        "tag": "Table",
        "values": Array [
          Object {
            "nextPos": 166,
            "pos": 160,
            "tag": "QualifiedIdentifier",
            "values": Array [
              Object {
                "nextPos": 166,
                "pos": 160,
                "tag": "UnquotedIdentifier",
                "value": "table1",
              },
            ],
          },
        ],
      },
      "table": "table1",
      "type": "Table",
    },
  ],
}
`;

exports[`Query Interface Should convert nested typed array param in select sql (SELECT :param::int[][][]) 1`] = `
Object {
  "params": Array [
    Object {
      "name": "param",
      "nextPos": 13,
      "pick": Array [],
      "pos": 7,
      "required": false,
      "spread": false,
      "type": Object {
        "items": Object {
          "items": Object {
            "items": Object {
              "name": "int4",
              "type": "Named",
              "value": Object {
                "type": "Number",
              },
            },
            "type": "Array",
          },
          "type": "Array",
        },
        "type": "Array",
      },
    },
  ],
  "results": Array [
    Object {
      "name": "array",
      "type": Object {
        "items": Object {
          "items": Object {
            "items": Object {
              "name": "int4",
              "type": "Named",
              "value": Object {
                "type": "Number",
              },
            },
            "type": "Array",
          },
          "type": "Array",
        },
        "type": "Array",
      },
    },
  ],
  "sources": Array [],
}
`;

exports[`Query Interface Should convert numeric sql (SELECT '123'::numeric) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "decimal",
      "type": Object {
        "name": "decimal",
        "type": "Named",
        "value": Object {
          "type": "Number",
        },
      },
    },
  ],
  "sources": Array [],
}
`;

exports[`Query Interface Should convert order by with params sql (SELECT * FROM table1 ORDER BY CASE WHEN $param1 = 'val1' AND $param2 = 'DESC' THEN col2 END DESC) 1`] = `
Object {
  "params": Array [
    Object {
      "name": "param1",
      "nextPos": 47,
      "pick": Array [],
      "pos": 40,
      "required": false,
      "spread": false,
      "type": Object {
        "literal": "val1",
        "type": "String",
      },
    },
    Object {
      "name": "param2",
      "nextPos": 68,
      "pick": Array [],
      "pos": 61,
      "required": false,
      "spread": false,
      "type": Object {
        "literal": "DESC",
        "type": "String",
      },
    },
  ],
  "results": Array [
    Object {
      "name": "?column?",
      "type": Object {
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 8,
          "pos": 7,
          "tag": "StarIdentifier",
          "values": Array [
            Object {
              "nextPos": 8,
              "pos": 7,
              "tag": "Star",
            },
          ],
        },
        "table": undefined,
        "type": "LoadStar",
      },
    },
  ],
  "sources": Array [
    Object {
      "isResult": true,
      "name": "table1",
      "schema": undefined,
      "sourceTag": Object {
        "nextPos": 20,
        "pos": 14,
        "tag": "Table",
        "values": Array [
          Object {
            "nextPos": 20,
            "pos": 14,
            "tag": "QualifiedIdentifier",
            "values": Array [
              Object {
                "nextPos": 20,
                "pos": 14,
                "tag": "UnquotedIdentifier",
                "value": "table1",
              },
            ],
          },
        ],
      },
      "table": "table1",
      "type": "Table",
    },
  ],
}
`;

exports[`Query Interface Should convert params in array range sql (SELECT (ARRAY[1,2,3,4])[$from:3]) 1`] = `
Object {
  "params": Array [
    Object {
      "name": "from",
      "nextPos": 29,
      "pick": Array [],
      "pos": 24,
      "required": false,
      "spread": false,
      "type": Object {
        "type": "Unknown",
      },
    },
  ],
  "results": Array [
    Object {
      "name": "array",
      "type": Object {
        "type": "ArrayItem",
        "value": Object {
          "items": Object {
            "items": Array [
              Object {
                "literal": 1,
                "type": "Number",
              },
              Object {
                "literal": 2,
                "type": "Number",
              },
              Object {
                "literal": 3,
                "type": "Number",
              },
              Object {
                "literal": 4,
                "type": "Number",
              },
            ],
            "type": "Union",
          },
          "type": "Array",
        },
      },
    },
  ],
  "sources": Array [],
}
`;

exports[`Query Interface Should convert simple delete sql (DELETE FROM table1) 1`] = `
Object {
  "params": Array [],
  "results": Array [],
  "sources": Array [
    Object {
      "isResult": true,
      "name": "table1",
      "schema": undefined,
      "sourceTag": Object {
        "nextPos": 18,
        "pos": 12,
        "tag": "Table",
        "values": Array [
          Object {
            "nextPos": 18,
            "pos": 12,
            "tag": "QualifiedIdentifier",
            "values": Array [
              Object {
                "nextPos": 18,
                "pos": 12,
                "tag": "UnquotedIdentifier",
                "value": "table1",
              },
            ],
          },
        ],
      },
      "table": "table1",
      "type": "Table",
    },
  ],
}
`;

exports[`Query Interface Should convert single param sql (SELECT :test1 AS "res1") 1`] = `
Object {
  "params": Array [
    Object {
      "name": "test1",
      "nextPos": 13,
      "pick": Array [],
      "pos": 7,
      "required": false,
      "spread": false,
      "type": Object {
        "type": "Unknown",
      },
    },
  ],
  "results": Array [
    Object {
      "name": "res1",
      "type": Object {
        "type": "Any",
      },
    },
  ],
  "sources": Array [],
}
`;

exports[`Query Interface Should convert star sql (SELECT * FROM table1) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "?column?",
      "type": Object {
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 8,
          "pos": 7,
          "tag": "StarIdentifier",
          "values": Array [
            Object {
              "nextPos": 8,
              "pos": 7,
              "tag": "Star",
            },
          ],
        },
        "table": undefined,
        "type": "LoadStar",
      },
    },
  ],
  "sources": Array [
    Object {
      "isResult": true,
      "name": "table1",
      "schema": undefined,
      "sourceTag": Object {
        "nextPos": 20,
        "pos": 14,
        "tag": "Table",
        "values": Array [
          Object {
            "nextPos": 20,
            "pos": 14,
            "tag": "QualifiedIdentifier",
            "values": Array [
              Object {
                "nextPos": 20,
                "pos": 14,
                "tag": "UnquotedIdentifier",
                "value": "table1",
              },
            ],
          },
        ],
      },
      "table": "table1",
      "type": "Table",
    },
  ],
}
`;

exports[`Query Interface Should convert static fields sql (SELECT col1 as "col1", col2 as "myCol2" FROM table1) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "col1",
      "type": Object {
        "column": "col1",
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 11,
          "pos": 7,
          "tag": "Column",
          "values": Array [
            Object {
              "nextPos": 11,
              "pos": 7,
              "tag": "UnquotedIdentifier",
              "value": "col1",
            },
          ],
        },
        "table": undefined,
        "type": "LoadColumn",
      },
    },
    Object {
      "name": "myCol2",
      "type": Object {
        "column": "col2",
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 27,
          "pos": 23,
          "tag": "Column",
          "values": Array [
            Object {
              "nextPos": 27,
              "pos": 23,
              "tag": "UnquotedIdentifier",
              "value": "col2",
            },
          ],
        },
        "table": undefined,
        "type": "LoadColumn",
      },
    },
  ],
  "sources": Array [
    Object {
      "isResult": true,
      "name": "table1",
      "schema": undefined,
      "sourceTag": Object {
        "nextPos": 51,
        "pos": 45,
        "tag": "Table",
        "values": Array [
          Object {
            "nextPos": 51,
            "pos": 45,
            "tag": "QualifiedIdentifier",
            "values": Array [
              Object {
                "nextPos": 51,
                "pos": 45,
                "tag": "UnquotedIdentifier",
                "value": "table1",
              },
            ],
          },
        ],
      },
      "table": "table1",
      "type": "Table",
    },
  ],
}
`;

exports[`Query Interface Should convert string fields not named sql (SELECT 'test', $$Dianne's horse$$, $SomeTag$Dianne's horse$SomeTag$) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "?column?",
      "type": Object {
        "literal": "test",
        "type": "String",
      },
    },
    Object {
      "name": "?column?",
      "type": Object {
        "literal": "Dianne's horse",
        "type": "String",
      },
    },
    Object {
      "name": "?column?",
      "type": Object {
        "literal": "Dianne's horse",
        "type": "String",
      },
    },
  ],
  "sources": Array [],
}
`;

exports[`Query Interface Should convert typed array param in select sql (SELECT :param::int[]) 1`] = `
Object {
  "params": Array [
    Object {
      "name": "param",
      "nextPos": 13,
      "pick": Array [],
      "pos": 7,
      "required": false,
      "spread": false,
      "type": Object {
        "items": Object {
          "name": "int4",
          "type": "Named",
          "value": Object {
            "type": "Number",
          },
        },
        "type": "Array",
      },
    },
  ],
  "results": Array [
    Object {
      "name": "array",
      "type": Object {
        "items": Object {
          "name": "int4",
          "type": "Named",
          "value": Object {
            "type": "Number",
          },
        },
        "type": "Array",
      },
    },
  ],
  "sources": Array [],
}
`;

exports[`Query Interface Should convert typed param in where sql (SELECT col1 FROM table1 WHERE :id::int IS NOT NULL) 1`] = `
Object {
  "params": Array [
    Object {
      "name": "id",
      "nextPos": 33,
      "pick": Array [],
      "pos": 30,
      "required": false,
      "spread": false,
      "type": Object {
        "name": "int4",
        "type": "Named",
        "value": Object {
          "type": "Number",
        },
      },
    },
  ],
  "results": Array [
    Object {
      "name": "col1",
      "type": Object {
        "column": "col1",
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 11,
          "pos": 7,
          "tag": "Column",
          "values": Array [
            Object {
              "nextPos": 11,
              "pos": 7,
              "tag": "UnquotedIdentifier",
              "value": "col1",
            },
          ],
        },
        "table": undefined,
        "type": "LoadColumn",
      },
    },
  ],
  "sources": Array [
    Object {
      "isResult": true,
      "name": "table1",
      "schema": undefined,
      "sourceTag": Object {
        "nextPos": 23,
        "pos": 17,
        "tag": "Table",
        "values": Array [
          Object {
            "nextPos": 23,
            "pos": 17,
            "tag": "QualifiedIdentifier",
            "values": Array [
              Object {
                "nextPos": 23,
                "pos": 17,
                "tag": "UnquotedIdentifier",
                "value": "table1",
              },
            ],
          },
        ],
      },
      "table": "table1",
      "type": "Table",
    },
  ],
}
`;

exports[`Query Interface Should convert update returning expression sql (UPDATE table1 SET col1 = 10 RETURNING id, col1, 123 as col2, '2' as col3, 3+4 as col4) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "id",
      "type": Object {
        "column": "id",
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 40,
          "pos": 38,
          "tag": "Column",
          "values": Array [
            Object {
              "nextPos": 40,
              "pos": 38,
              "tag": "UnquotedIdentifier",
              "value": "id",
            },
          ],
        },
        "table": "table1",
        "type": "LoadColumn",
      },
    },
    Object {
      "name": "col1",
      "type": Object {
        "column": "col1",
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 46,
          "pos": 42,
          "tag": "Column",
          "values": Array [
            Object {
              "nextPos": 46,
              "pos": 42,
              "tag": "UnquotedIdentifier",
              "value": "col1",
            },
          ],
        },
        "table": "table1",
        "type": "LoadColumn",
      },
    },
    Object {
      "name": "col2",
      "type": Object {
        "literal": 123,
        "type": "Number",
      },
    },
    Object {
      "name": "col3",
      "type": Object {
        "literal": "2",
        "type": "String",
      },
    },
    Object {
      "name": "col4",
      "type": Object {
        "type": "Number",
      },
    },
  ],
  "sources": Array [
    Object {
      "isResult": true,
      "name": "table1",
      "schema": undefined,
      "sourceTag": Object {
        "nextPos": 13,
        "pos": 7,
        "tag": "Table",
        "values": Array [
          Object {
            "nextPos": 13,
            "pos": 7,
            "tag": "QualifiedIdentifier",
            "values": Array [
              Object {
                "nextPos": 13,
                "pos": 7,
                "tag": "UnquotedIdentifier",
                "value": "table1",
              },
            ],
          },
        ],
      },
      "table": "table1",
      "type": "Table",
    },
  ],
}
`;

exports[`Query Interface Should convert update returning sql (UPDATE table1 SET col1 = 10 RETURNING id, col1) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "id",
      "type": Object {
        "column": "id",
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 40,
          "pos": 38,
          "tag": "Column",
          "values": Array [
            Object {
              "nextPos": 40,
              "pos": 38,
              "tag": "UnquotedIdentifier",
              "value": "id",
            },
          ],
        },
        "table": "table1",
        "type": "LoadColumn",
      },
    },
    Object {
      "name": "col1",
      "type": Object {
        "column": "col1",
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 46,
          "pos": 42,
          "tag": "Column",
          "values": Array [
            Object {
              "nextPos": 46,
              "pos": 42,
              "tag": "UnquotedIdentifier",
              "value": "col1",
            },
          ],
        },
        "table": "table1",
        "type": "LoadColumn",
      },
    },
  ],
  "sources": Array [
    Object {
      "isResult": true,
      "name": "table1",
      "schema": undefined,
      "sourceTag": Object {
        "nextPos": 13,
        "pos": 7,
        "tag": "Table",
        "values": Array [
          Object {
            "nextPos": 13,
            "pos": 7,
            "tag": "QualifiedIdentifier",
            "values": Array [
              Object {
                "nextPos": 13,
                "pos": 7,
                "tag": "UnquotedIdentifier",
                "value": "table1",
              },
            ],
          },
        ],
      },
      "table": "table1",
      "type": "Table",
    },
  ],
}
`;

exports[`Query Interface Should convert update returning star sql (UPDATE table1 SET col1 = 10 WHERE id = :id RETURNING *) 1`] = `
Object {
  "params": Array [
    Object {
      "name": "id",
      "nextPos": 42,
      "pick": Array [],
      "pos": 39,
      "required": false,
      "spread": false,
      "type": Object {
        "column": "id",
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 36,
          "pos": 34,
          "tag": "Column",
          "values": Array [
            Object {
              "nextPos": 36,
              "pos": 34,
              "tag": "UnquotedIdentifier",
              "value": "id",
            },
          ],
        },
        "table": "table1",
        "type": "LoadColumn",
      },
    },
  ],
  "results": Array [
    Object {
      "name": "?column?",
      "type": Object {
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 54,
          "pos": 53,
          "tag": "StarIdentifier",
          "values": Array [
            Object {
              "nextPos": 54,
              "pos": 53,
              "tag": "Star",
            },
          ],
        },
        "table": undefined,
        "type": "LoadStar",
      },
    },
  ],
  "sources": Array [
    Object {
      "isResult": true,
      "name": "table1",
      "schema": undefined,
      "sourceTag": Object {
        "nextPos": 13,
        "pos": 7,
        "tag": "Table",
        "values": Array [
          Object {
            "nextPos": 13,
            "pos": 7,
            "tag": "QualifiedIdentifier",
            "values": Array [
              Object {
                "nextPos": 13,
                "pos": 7,
                "tag": "UnquotedIdentifier",
                "value": "table1",
              },
            ],
          },
        ],
      },
      "table": "table1",
      "type": "Table",
    },
  ],
}
`;

exports[`Query Interface Should convert where params sql (
        SELECT col1, col2
        FROM table1
        WHERE
          table1.id = :id
          AND col1 > :val1
      ) 1`] = `
Object {
  "params": Array [
    Object {
      "name": "id",
      "nextPos": 86,
      "pick": Array [],
      "pos": 83,
      "required": false,
      "spread": false,
      "type": Object {
        "column": "id",
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 80,
          "pos": 71,
          "tag": "Column",
          "values": Array [
            Object {
              "nextPos": 77,
              "pos": 71,
              "tag": "UnquotedIdentifier",
              "value": "table1",
            },
            Object {
              "nextPos": 80,
              "pos": 78,
              "tag": "UnquotedIdentifier",
              "value": "id",
            },
          ],
        },
        "table": "table1",
        "type": "LoadColumn",
      },
    },
    Object {
      "name": "val1",
      "nextPos": 113,
      "pick": Array [],
      "pos": 108,
      "required": false,
      "spread": false,
      "type": Object {
        "column": "col1",
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 105,
          "pos": 101,
          "tag": "Column",
          "values": Array [
            Object {
              "nextPos": 105,
              "pos": 101,
              "tag": "UnquotedIdentifier",
              "value": "col1",
            },
          ],
        },
        "table": undefined,
        "type": "LoadColumn",
      },
    },
  ],
  "results": Array [
    Object {
      "name": "col1",
      "type": Object {
        "column": "col1",
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 20,
          "pos": 16,
          "tag": "Column",
          "values": Array [
            Object {
              "nextPos": 20,
              "pos": 16,
              "tag": "UnquotedIdentifier",
              "value": "col1",
            },
          ],
        },
        "table": undefined,
        "type": "LoadColumn",
      },
    },
    Object {
      "name": "col2",
      "type": Object {
        "column": "col2",
        "schema": undefined,
        "sourceTag": Object {
          "nextPos": 26,
          "pos": 22,
          "tag": "Column",
          "values": Array [
            Object {
              "nextPos": 26,
              "pos": 22,
              "tag": "UnquotedIdentifier",
              "value": "col2",
            },
          ],
        },
        "table": undefined,
        "type": "LoadColumn",
      },
    },
  ],
  "sources": Array [
    Object {
      "isResult": true,
      "name": "table1",
      "schema": undefined,
      "sourceTag": Object {
        "nextPos": 46,
        "pos": 40,
        "tag": "Table",
        "values": Array [
          Object {
            "nextPos": 46,
            "pos": 40,
            "tag": "QualifiedIdentifier",
            "values": Array [
              Object {
                "nextPos": 46,
                "pos": 40,
                "tag": "UnquotedIdentifier",
                "value": "table1",
              },
            ],
          },
        ],
      },
      "table": "table1",
      "type": "Table",
    },
  ],
}
`;
